<resources>
    <string name="app_name">간편하GIRO
    </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notice">공지</string>
    <string name="message">기타세입금 납부 메뉴 변경안내</string>
    <string name="NationalTax">국세</string>
    <string name="giroTax">\n   지로납부청구서</string>
    <string name="seeDetail">\n  상세보기</string>
    <string name="seeDetailBtn">상세보기</string>
    <string name="pay">납부하기</string>
    <string name="enterPw">    간편 비밀번호 입력</string>
    <string name="more_view">더보기</string>
    <string name="account_register">계좌등록</string>
    <string name="do_account_register">계좌등록하기</string>
    <string name="option">옵션</string>
    <string name="bill_alarm">고지서알림</string>
    <string name="push_message">푸시메시지</string>
    <string name="sound">소리</string>
    <string name="vibration">진동</string>
    <string name="silent">무음</string>
    <string name="push_on">on</string>
    <string name="push_off">off</string>
    <string name="financial_institution">금융기관</string>
    <string name="account_number">계좌번호</string>
    <string name="add">추가하기</string>
    <string name="register">등록하기</string>
    <string name="choose_financial_institution">금융기관선택</string>
    <string name="manage_name">관리명</string>
    <string name="account_holder">계좌주</string>
    <string name="account_password">계좌비밀번호</string>
    <string name="register_complete">등록완료</string>
    <string name="go_back">돌아가기</string>
    <string name="date">날짜</string>
    <string name="list">항목</string>
    <string name="price">금액</string>

    <string name="autoLogin">자동로그인</string>
    <string name="agree">동의함</string>
    <string name="disagree">동의하지 않음</string>
    <string name="policyAgreement">개인정보 활용 동의서</string>
    <string name="next">다음</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호 (숫자, 영문포함 8~12자리)</string>
    <string name="passwordAgain">비밀번호 재입력</string>
    <string name="name">이름</string>
    <string name="birthYearMonthDay">주민등록번호 앞자리(6자리)</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="phone">휴대폰 (-빼고 입력)</string>
    <string name="mailAddress">이메일주소</string>
    <string name="registerAuth">공인인증서 등록</string>
    <string name="idCheck">중복확인</string>
    <string name="join">회원가입</string>
    <string name="ok">확인</string>
    <string name="none">미정</string>
    <string name="address">주소</string>
    <string name="payHistory">납부내역</string>
    <string name="qrCode">QR 코드</string>
    <string name="logOut">로그아웃</string>
    <string name="personalDataAgreement">- 수집 이용목적 : 지로서비스 제공\n
- 수집항목\n
 1. 회원가입 : (필수정보) ID, 비밀번호, 성명, 생년월일, 전화번호, 이메일주소, 휴대폰번호\n
 2. 지로업무처리 : (필수정보) 거래금융회사(카드사)명, 주민등록번호(고유식별정보), 계좌(카드)번호, 예금(카드소유)주명, IP주소\n
- 보유 및 파기 : 이용자의 별도 해지요청이 있을때까지\n
* 이용자는 개인정보 수집 및 이용을 거부할 권리가 있으며, 서비스 제공에 필요한 최소한의 개인정보 수집 및 이용에 동의하지 않을 경우 이용에 제한을 받을 수 있습니다. 
    </string>

</resources>
