<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >
        <EditText
            android:id="@+id/join_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/id"
            android:textSize="20sp"
            android:layout_weight="7"
            />
        <Button
            android:id="@+id/join_idCheck"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/idCheck"
            android:layout_weight="3"
            android:background="@drawable/border"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/join_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <EditText
            android:id="@+id/join_pwAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/passwordAgain"
            android:textSize="20sp"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >
        <EditText
            android:id="@+id/join_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/name"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:weightSum="3">

        <EditText
            android:id="@+id/join_birthYearMonthDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/birthYearMonthDay"
            android:background="@drawable/border"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/join_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/join_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:hint="@string/mailAddress"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:layout_weight="2">
        <Button
            android:id="@+id/btnOK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/registerAuth"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>