<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.limhj.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="79dp"
        android:text="@string/do_account_register"
        android:textSize="30sp" />

    <Button
        android:id="@+id/go_back"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="52dp"
        android:text="@string/go_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:text="@string/register_complete"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="122dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="114dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
