<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_weight="0">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/policyAgreement"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="개인정보 동의서 내용"
            android:textSize="30sp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/agree"
            android:layout_marginStart="80dp"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/disagree"
            android:layout_marginStart="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/joinPolicy_btnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:textSize="20sp"
            >

        </Button>

    </LinearLayout>

</LinearLayout>