<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.limhj.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="54dp"
        android:text="@string/do_account_register"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/account_password"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/account_holder"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/account_number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/manage_name"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:text="@string/choose_financial_institution"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="382dp"
        android:layout_height="66dp"
        android:text="@string/register"
        android:layout_marginLeft="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/choose_financial_institution"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/manage_name"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/account_number"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/account_holder"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="382dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/account_password"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:layout_marginLeft="14dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>
