<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/do_account_register"
            android:textAlignment="center"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.87">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/financial_institution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_financial_institution"
                android:layout_weight="0.1"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/choose_financial_institution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/choose_financial_institution"
                android:inputType="textMultiLine"
                android:layout_weight="0.1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/managename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage_name"
                android:layout_weight="0.1"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/manage_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/manage_name"
                android:inputType="textMultiLine"
                android:layout_weight="0.1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/accountnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:layout_weight="0.1"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/accountnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/account_number"
                android:inputType="textMultiLine"
                android:layout_weight="0.1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/account_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_holder"
                android:layout_weight="0.1"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/accountholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/account_holder"
                android:inputType="textMultiLine"
                android:layout_weight="0.1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/account_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_password"
                android:layout_weight="0.1"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/accountpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/account_password"
                android:inputType="number"
                android:layout_weight="0.1"
                android:textAlignment="center" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.03">

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
