<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"

        android:weightSum="1">

        <Button
            android:id="@+id/option"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/option"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/register_account"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:text="@string/account_register"
            android:background="@color/colorPrimary"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/qrCode"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorTeal"
            android:text="@string/qrCode"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        <Button
            android:id="@+id/qrCode1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorTeal"
            android:text="@string/qrCode"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginStart="60dp"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>